# generator_seo

./: Dockerfile  README.md  azure-pipelines.yml  config.yml  pyproject.toml  requirements.txt
app/: app.py
app/assets/css/: theme-old.css  theme.css
app/model/gpt/: get_model.py
app/model/mistral/: get_model.py
app/model/prompt/: prompt_template.py
app/utils/: banned_expression.yml  llmtools.py  pdf_loader.py  textformatools.py  tools.py  ui.py  vault.py
notebooks/: 00-data.ipynb  01-creation-contenu.ipynb  02-tests.ipynb  03-tests-structure-contenu.ipynb
